# warpnet-desktop

./: .gitignore  LICENSE.md  Makefile  README.md  embed-darwin.go  embed-linux.go  embed-win.go  go.mod
.githooks/: pre-commit  pre-push
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
